--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -174,7 +174,8 @@ body {
     weight: 300 ;
   }
   line-height: 14px;
-  color: #333333;
+  // color: #333333;
+  color: white ;
   background-color: $background ; 
   word-spacing: 1px ;
 }
