--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -31,6 +31,7 @@
     = render :partial => 'modals/teacher/new-sk-two'
     = render :partial => 'modals/teacher/demo-intro'
     = render :partial => 'modals/teacher/demo'
+    = render :partial => 'modals/teacher/ws-options'
     = render :partial => 'modals/user/ask-a-question'
     = render :partial => 'modals/user/upload-scans'
     = render :partial => 'modals/examiner/audit'
