--- a/app/views/modals/teacher/_ws-options.html.haml
+++ b/app/views/modals/teacher/_ws-options.html.haml
@@ -17,7 +17,7 @@
             Students will have to print-out their own worksheets. Scanning and uploading 
             can be done either in school or at home
           .row-fluid.hide.detail
-            = simple_link :for => "Go Back", :class => "go-back pull-left btn btn-primary", :icon => 'icon-chevron-left'
+            = simple_link :for => "Back", :class => "go-back pull-left btn btn-primary", :icon => 'icon-chevron-left'
             = simple_link :for => "Make PDF", :class => 'btn btn-primary submit pull-right', :icon => 'icon-cog'
 
     .span3.ws-option{ :id => 'as-takehome', :data => { :show => 'set-deadline set-duration' } }
@@ -34,7 +34,7 @@
             Students are responsible for printing, scanning and uploading their work 
             in the specified duration
           .row-fluid.hide.detail
-            = simple_link :for => "Go Back", :class => "go-back pull-left btn btn-primary", :icon => 'icon-chevron-left'
+            = simple_link :for => "Back", :class => "go-back pull-left btn btn-primary", :icon => 'icon-chevron-left'
             = simple_link :for => "Make PDF", :class => 'btn btn-primary submit pull-right', :icon => 'icon-cog'
 
     .span3.ws-option{ :id => 'as-classwork', :data => { :show => 'no-duration-deadline' } }
@@ -49,7 +49,7 @@
             Teachers would be responsible for printing out, scanning and uploading 
             student work
           .row-fluid.hide.detail
-            = simple_link :for => "Go Back", :class => "go-back pull-left btn btn-primary", :icon => 'icon-chevron-left'
+            = simple_link :for => "Back", :class => "go-back pull-left btn btn-primary", :icon => 'icon-chevron-left'
             = simple_link :for => "Make PDF", :class => 'btn btn-primary submit pull-right', :icon => 'icon-cog'
 
     .span3.hide.ws-detail{ :id => 'set-deadline' }
