--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -106,21 +106,21 @@
               %ul.nav.span9.pull-right
                 -# dropdown -> Quiz -> [ new, edit, save ]
                 %li.dropdown
-                  = simple_link :for => "Quizzes", id: 'm-teacher-quizzes'
+                  = simple_link for: "Quizzes", id: 'm-teacher-quizzes'
                 %li.dropdown
-                  = simple_link :for => "Report Cards", id: 'm-report-cards'
+                  = simple_link for: "Report Cards", id: 'm-report-cards'
                 %li.dropdown
-                  = simple_link :for => "Upload", id: 'lnk-upload'
+                  = simple_link for: "Upload", id: 'lnk-upload'
 
                 - unless tc.online
                   %li.dropdown
-                    = simple_link :for => "Groups", id: 'm-tc-sektions'
+                    = simple_link for: "Groups", id: 'm-tc-sektions'
                   %li.dropdown
-                    = simple_link :for => "Help", id: 'm-howto'
+                    = simple_link for: "Help", id: 'm-howto'
                   %li.dropdown
-                    = simple_link :for => "QuickTrial", id: 'lnk-demo'
+                    = simple_link for: "QuickTrial", id: 'lnk-demo'
                 %li#cp-account-link.dropdown
-                  = simple_link :for => "Hello, #{tc.first_name}", id: 'm-account'
+                  = simple_link for: "Hello, #{tc.first_name}", id: 'm-account'
       #desktop.row-fluid
         #left.g-panel.span4
           = render partial: 'toolbox/paginator', locals: { id: 'left-paginator', url: '#' }
