--- a/app/views/modals/student/_enroll.html.haml
+++ b/app/views/modals/student/_enroll.html.haml
@@ -3,7 +3,7 @@
   .span3
     = image_tag 'notifications/group.png', :class => 'big-icon'
   .span8
-    %p.title= "Join a Group"
+    %p.title.underline= "Join a Group"
     %p
       You need to if you want to see your graded assignments. Ask your 
       teacher or instructor for the <b>Group Code</b> and enter it below
