--- a/app/views/modals/student/_enrollment-confirm.html.haml
+++ b/app/views/modals/student/_enrollment-confirm.html.haml
@@ -3,7 +3,7 @@
   .span3
     = image_tag 'notifications/id-card.png', :class => 'big-icon'
   .span8
-    %p.title= "Confirm Name"
+    %p.title.underline= "Confirm Name"
     %p
       Your name is most similar to the following names added by your teacher
     %p
