--- a/app/views/notifications/shared/_first-scan.html.haml
+++ b/app/views/notifications/shared/_first-scan.html.haml
@@ -3,6 +3,6 @@
   .span3
     = image_tag 'notifications/first.png', :class => 'big-icon'
   .span8
-    %p.title= "First Scan"
+    %p.title.underline= "First Scan"
     %p
       This is the first scan in the set
