--- a/app/views/notifications/shared/_last-scan.html.haml
+++ b/app/views/notifications/shared/_last-scan.html.haml
@@ -3,6 +3,6 @@
   .span3
     = image_tag 'notifications/last.png', :class => 'big-icon'
   .span8
-    %p.title= "Last Scan"
+    %p.title.underline= "Last Scan"
     %p
       If you are done grading, then please move onto other pages 
