--- a/app/views/notifications/shared/_old-browser.html.haml
+++ b/app/views/notifications/shared/_old-browser.html.haml
@@ -3,7 +3,7 @@
   .span3
     = image_tag 'notifications/old-browser.png', :class => 'big-icon'
   .span8
-    %p.title= "Old Browser?"
+    %p.title.underline= "Old Browser?"
     %p
       For a seamless experience, we recommend you switch to one of the browsers below 
       %ul
