--- a/app/views/notifications/shared/_question-received.html.haml
+++ b/app/views/notifications/shared/_question-received.html.haml
@@ -3,5 +3,5 @@
   .span3
     = image_tag 'notifications/question.png', :class => 'big-icon'
   .span8
-    %p.title
+    %p.title.underline
     %p.msg
