--- a/app/views/notifications/student/_enrolled-already.html.haml
+++ b/app/views/notifications/student/_enrolled-already.html.haml
@@ -3,6 +3,6 @@
   .span3
     = image_tag 'notifications/alert.png', :class => 'big-icon'
   .span8
-    %p.title= "Nothing to be done"
+    %p.title.underline= "Nothing to be done"
     %p
       You are already enrolled in this group
