--- a/app/views/notifications/student/_enrollment-blocked.html.haml
+++ b/app/views/notifications/student/_enrollment-blocked.html.haml
@@ -3,7 +3,7 @@
   .span3
     = image_tag 'notifications/block-user.png', :class => 'big-icon'
   .span8
-    %p.title= "Unable to enroll"
+    %p.title.underline= "Unable to enroll"
     %p
       The name you registered with does not match any of the names 
       your instructor added 
