--- a/app/views/notifications/student/_sektion-not-found.html.haml
+++ b/app/views/notifications/student/_sektion-not-found.html.haml
@@ -3,6 +3,6 @@
   .span3
     = image_tag 'notifications/alert.png', :class => 'big-icon'
   .span8
-    %p.title= "Incorrect Group Code"
+    %p.title.underline= "Incorrect Group Code"
     %p
       Please check the group code you entered 
