--- a/app/views/notifications/teacher/_compiled.html.haml
+++ b/app/views/notifications/teacher/_compiled.html.haml
@@ -3,6 +3,6 @@
   .span3
     = image_tag 'notifications/document.png', :class => 'big-icon'
   .span8
-    %p.title= "Worksheet(s) ready"
+    %p.title.underline= "Worksheet(s) ready"
     %p
       You can now download and print the worksheet you just built
