--- a/app/views/notifications/teacher/_favourited.html.haml
+++ b/app/views/notifications/teacher/_favourited.html.haml
@@ -3,6 +3,6 @@
   .span3
     = image_tag 'notifications/favourite.png', :class => 'big-icon'
   .span8
-    %p.title= "Added to favourites"
+    %p.title.underline= "Added to favourites"
     %p
       Click on the <b>Favourites tab</b> to see just your favourite questions on the selected topics
