--- a/app/views/notifications/teacher/_new-sektion.html.haml
+++ b/app/views/notifications/teacher/_new-sektion.html.haml
@@ -3,7 +3,7 @@
   .span3
     = image_tag 'notifications/new-sektion.png', :class => 'big-icon'
   .span8
-    %p.title
+    %p.title.underline
     %p
       Student can either self-enroll by entering the above code 
     %p
