--- a/app/views/notifications/teacher/_prefabricating.html.haml
+++ b/app/views/notifications/teacher/_prefabricating.html.haml
@@ -3,7 +3,7 @@
   .span3
     = image_tag 'notifications/timer.png', :class => 'big-icon'
   .span8
-    %p.title
+    %p.title.underline
     %p
       Please wait while the system customizes the quiz and makes a sample 
       worksheet for you
