--- a/app/views/notifications/teacher/_queued.html.haml
+++ b/app/views/notifications/teacher/_queued.html.haml
@@ -3,7 +3,7 @@
   .span3
     = image_tag 'notifications/timer.png', :class => 'big-icon'
   .span8
-    %p.title
+    %p.title.underline
     %p
       PDF will be ready for download after the above mentioned time
     %p
