--- a/app/views/notifications/teacher/_qzb-no-selection.html.haml
+++ b/app/views/notifications/teacher/_qzb-no-selection.html.haml
@@ -3,7 +3,7 @@
   .span3
     = image_tag 'notifications/alert.png', :class => 'big-icon'
   .span8
-    %p.title= "No questions selected!"
+    %p.title.underline= "No questions selected!"
     %p
       You must select atleast one question to make a quiz. 
       Click <i class='icon-plus-sign icon-white'></i> to select questions
