--- a/app/views/notifications/teacher/_wsb-no-selection.html.haml
+++ b/app/views/notifications/teacher/_wsb-no-selection.html.haml
@@ -3,6 +3,6 @@
   .span3
     = image_tag 'notifications/alert.png', :class => 'big-icon'
   .span8
-    %p.title= "No students selected!"
+    %p.title.underline= "No students selected!"
     %p
       You must select atleast one student to make a worksheet
