--- a/app/views/teachers/_wsb.html.haml
+++ b/app/views/teachers/_wsb.html.haml
@@ -22,6 +22,6 @@
     #pane-wsb-sektions.tab-pane.scroll
       = render :partial => 'teachers/wsb-sektions', :locals => { :teacher => teacher }
   - if online_instructor
-    #pane-online-courses
+    #pane-online-courses.tab-pane.scroll
 
     
