--- a/app/views/notifications/teacher/_qzb-no-name.html.haml
+++ b/app/views/notifications/teacher/_qzb-no-name.html.haml
@@ -3,6 +3,6 @@
   .span3
     = image_tag 'notifications/alert.png', :class => 'big-icon'
   .span8
-    %p.title= "Quiz needs a name"
+    %p.title.underline= "Quiz needs a name"
     %p
       Please give this quiz a name - something for you to remember it by
