Minor stylistic change

--- a/app/views/modals/user/_upload-scans.html.haml
+++ b/app/views/modals/user/_upload-scans.html.haml
@@ -6,7 +6,7 @@
       .span2
         = image_tag 'quick-trial/upload.png', :class => 'big-icon offset1'
       .span9
-        %h2= "What would you like to upload?"
+        %p.title= "What would you like to upload?"
         .btn.btn-inverse.btn-large.upload.pull-left{:id => 'btn-upload-scans'}
           Scans for Grading
           .small-text.orange= "PDF preferred. JPEG allowed"
