Styling for a new class - .light - defined

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -33,6 +33,10 @@ img {
   border-bottom: 1px solid $deep-blue ;
 }
 
+.light { 
+  font-weight: 300 ;
+} 
+
 #badge {
   margin-top: 90px ;
   img { z-index: 900 ; }
