Initial framework for listing Course outline and available assets
Next step: Attaching / detaching assets from selected course

--- a/app/views/menus/teacher/_per-qz.html.haml
+++ b/app/views/menus/teacher/_per-qz.html.haml
@@ -1,11 +1,14 @@
 
+- online_instructor = current_account.loggable.online
+
 %ul.dropdown-menu.dropdown-inverse#per-quiz{ :role => :menu }
   %li
     = simple_link :for => "Edit Quiz", :id => 'lnk-edit-qz', :icon => 'icon-edit'
-  %li
-    = simple_link :for => "New Worksheet", :id => 'lnk-wsb-new', :icon => 'icon-plus-sign'
-  %li
-    = simple_link :for => "List Worksheets", :id => 'lnk-wsb-existing', :icon => 'icon-list'
+  - unless online_instructor  
+    %li
+      = simple_link :for => "New Worksheet", :id => 'lnk-wsb-new', :icon => 'icon-plus-sign'
+    %li
+      = simple_link :for => "List Worksheets", :id => 'lnk-wsb-existing', :icon => 'icon-list'
   %li
     = simple_link :for => "Download Solution (PDF)", :id => 'lnk-download-solution', 
     :url => { :self => "#{Gutenberg['server']}/mint/quiz/:a/answer-key-:b.pdf" }, :icon => 'icon-download' 
