Re-named modal for creating a new course

--- a/app/views/modals/teacher/_new-course.html.haml
+++ b/app/views/modals/teacher/_new-course.html.haml
@@ -1,5 +1,5 @@
 
-#m-add-course.modal.fade.regular{ :role => :dialog }
+#m-new-course.modal.fade.regular{ :role => :dialog }
   .row-fluid
     .span3
     .span8
