[Online instructor]: Ability to define a video lesson added

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -41,6 +41,7 @@
 
     - if tc.online
       = render partial: 'modals/teacher/new-course'
+      = render partial: 'modals/teacher/new-lesson'
   #notifications
     = render partial: 'notifications/teacher/favourited'
     = render partial: 'notifications/teacher/qzb-no-selection'
