--- a/app/views/menus/teacher/_courses.html.haml
+++ b/app/views/menus/teacher/_courses.html.haml
@@ -1,4 +1,6 @@
 
 %ul.dropdown-menu.dropdown-inverse#m-courses{ :role => :menu }
   %li
-    = simple_link for: "New Course", icon: 'icon-plus-sign', id: 'course-add-new'
+    = simple_link for: "New Course", icon: 'icon-plus-sign', id: 'new-course'
+  %li
+    = simple_link for: "New Lesson", icon: 'icon-plus-sign', id: 'new-lesson'
