--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -27,6 +27,7 @@
 %html{html_attrs}
   %head 
     = javascript_include_tag "application", "students"
+    %script{ type: 'text/javascript', src: '//cdn.sublimevideo.net/js/2fya70le.js' }
     = stylesheet_link_tag "application" 
     = csrf_meta_tag
 
