--- a/app/views/teachers/_edit-course.html.haml
+++ b/app/views/teachers/_edit-course.html.haml
@@ -11,5 +11,5 @@
           %li
             = simple_link for: "Other #{m}", id: "tab-available-#{m}", url: { self: "available/assets?type=#{m}&course=:prev" }
       .tab-content.span9{ id: 'lessons-and-quizzes' }
-        .column.span6.purge-blind
-        .column.span6.purge-blind
+        .column.span5.purge-blind
+        .column.span5.offset1.purge-blind
