Rationalized handling of videos ...
Videos are now rendered as single-lines .. And they can have
contextual menus like single-lines do.

Important changes made in core/trigger.js.coffee to handle clicks
on menu items in .single-line > .menu

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -14,6 +14,7 @@
     = render partial: 'menus/teacher/per-qz'
     = render partial: 'menus/teacher/per-ws'
     = render partial: 'menus/teacher/per-question'
+    = render partial: 'menus/teacher/per-asset'
     = render partial: 'menus/teacher/qz-main', locals: { teacher: tc, server: server }
     = render partial: 'menus/teacher/sektions'
     = render partial: 'menus/teacher/rc' 
@@ -23,7 +24,6 @@
     = render partial: 'menus/user/account'
     = render partial: 'menus/user/notifications'
     = render partial: 'toolbox/fdb-panel'
-    = render partial: 'toolbox/video'
     - if tc.online
       = render partial: 'menus/teacher/courses'
 
@@ -43,6 +43,7 @@
     - if tc.online
       = render partial: 'modals/teacher/new-course'
       = render partial: 'modals/teacher/new-lesson'
+      = render partial: 'modals/teacher/mng-assets'
   #notifications
     = render partial: 'notifications/teacher/favourited'
     = render partial: 'notifications/teacher/qzb-no-selection'
