--- a/app/views/teachers/_edit-course.html.haml
+++ b/app/views/teachers/_edit-course.html.haml
@@ -6,10 +6,13 @@
       %ul.nav.nav-tabs.span2
         - [*1..3].each do |m|
           %li
-            = simple_link for: "Milestone #{m}", id: "tab-milestone-#{m}", url: { self: "milestone/load?index=#{m}&course=:prev" }
+            = simple_link for: "Milestone #{m}", id: "tab-milestone-#{m}", 
+              url: { self: "milestone/load?index=#{m}&course=:prev" }, href: '#lessons-and-quizzes'
         - ['Lessons', 'Quizzes'].each do |m|
           %li
-            = simple_link for: "Other #{m}", id: "tab-available-#{m}", url: { self: "available/assets?type=#{m}&course=:prev" }
-      .tab-content.span9{ id: 'lessons-and-quizzes' }
-        .column.span5.purge-blind
-        .column.span5.offset1.purge-blind
+            = simple_link for: "Other #{m}", id: "tab-available-#{m}", 
+              url: { self: "available/assets?type=#{m}&course=:prev" }, href: '#lessons-and-quizzes'
+      .tab-content.span9
+        #lessons-and-quizzes.tab-pane
+          .column.span5.purge-blind
+          .column.span5.offset1.purge-blind
