--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -6,20 +6,20 @@
 
 - content_for :toolbox do 
   #toolbox.hidden 
-    = render :partial => 'toolbox/line'
-    = render :partial => 'toolbox/preview'
-    = render :partial => 'menus/user/account'
-    = render :partial => 'menus/admin/workbench', :locals => { :is_admin => is_admin }
-    = render :partial => 'menus/user/notifications'
-    = render :partial => 'examiners/annotation-marks'
-    = render :partial => 'menus/examiner/blockdb'
+    = render partial: 'toolbox/line'
+    = render partial: 'toolbox/preview'
+    = render partial: 'menus/user/account'
+    = render partial: 'menus/admin/workbench', locals: { :is_admin => is_admin }
+    = render partial: 'menus/user/notifications'
+    = render partial: 'examiners/annotation-marks'
+    = render partial: 'menus/examiner/blockdb'
   
 - content_for :modals do
   #modals
-    = render :partial => 'modals/user/account'
-    = render :partial => 'modals/examiner/audit'
-    = render :partial => 'notifications/shared/last-scan'
-    = render :partial => 'notifications/shared/first-scan'
+    = render partial: 'modals/user/account'
+    = render partial: 'modals/examiner/audit'
+    = render partial: 'notifications/shared/last-scan'
+    = render partial: 'notifications/shared/first-scan'
 
 !!!5
 
@@ -32,68 +32,70 @@
 
   %body 
     #spinner.spinner
-      = image_tag "loading.gif", :id => 'img-spinner'
+      = image_tag "loading.gif", id: 'img-spinner'
     .container-fluid 
       #control-panel.g-panel.row-fluid{ :marker => "#{user.id}" } 
         .span12
           .navbar.navbar-inverse
             .navbar-inner
-              %a.brand.span3{ :href => "#"}
+              %a.brand.span3{ href: "#"}
                 = image_tag "logo-mit-beta-2.png"
                 .tagline.span10.offset1= "Grades will happen"
               %ul.nav.span8.pull-right
                 - if is_admin
                   %li.dropdown
-                    = simple_link :for => 'System Monitor', :id => 'lnk-admin-console'
+                    = simple_link :for => 'System Monitor', id: 'lnk-admin-console'
                 %li.dropdown
-                  = simple_link :for => "Workbench", :as => :dropdown, :id => 'm-admin-wb'
+                  = simple_link :for => "Workbench", as: :dropdown, id: 'm-admin-wb'
                 %li#cp-account-link.dropdown
-                  = simple_link :for => "Hello, #{user.first_name}", :as => :dropdown, :id => 'm-account'
+                  = simple_link :for => "Hello, #{user.first_name}", as: :dropdown, id: 'm-account'
       #desktop.row-fluid
         #left.g-panel.span4
-          = render :partial => 'toolbox/paginator', :locals => { :id => 'left-paginator', :url => '#' }
+          = render partial: 'toolbox/paginator', locals: { id: 'left-paginator', url: '#' }
 
           - if is_admin
             #left-1
-              = render :partial => 'admin/system-overview'
+              = render partial: 'admin/system-overview'
             #left-X
             #left-2
-              = render :partial => "admin/mng-topics"
+              = render partial: "admin/mng-topics"
 
           #left-3
-            = render :partial => 'examiners/tag-pending'
+            = render partial: 'examiners/tag-pending'
           #left-4
-            = render :partial => 'toolbox/grd-pending'
+            = render partial: 'toolbox/grd-pending'
           #left-5
-            = render :partial => 'examiners/typeset-pending'
+            = render partial: 'examiners/typeset-pending'
           #left-6
-            = render :partial => 'examiners/resolution-pending'
+            = render partial: 'examiners/resolution-pending'
           #left-7
-            = render :partial => 'examiners/audit'
+            = render partial: 'examiners/audit'
+          #left-8
+            = render partial: 'examiners/video-pending'
 
         - if is_admin
           #middle.g-panel.span4
-            = render :partial => 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
+            = render partial: 'toolbox/paginator', locals: { id: 'middle-paginator', url: '#' }
             #middle-X
           #right.g-panel.span4
-            = render :partial => 'toolbox/paginator', :locals => { :id => 'right-paginator', :url => '#' }
+            = render partial: 'toolbox/paginator', locals: { id: 'right-paginator', url: '#' }
             #right-X
 
         #wide.g-panel.span8
           - if is_admin
             #wide-1
             #wide-2
-              = render :partial => 'admin/accounts-in-country'
+              = render partial: 'admin/accounts-in-country'
           #wide-X
           #wide-wait
-            = render :partial => 'toolbox/wait'
+            = render partial: 'toolbox/wait'
           #graph-paper
           #wide-grd-canvas
             .row-fluid
-              = render :partial => 'toolbox/grd-toolbar'
+              = render partial: 'toolbox/grd-toolbar'
             .row-fluid
               .span1
-                = render :partial => 'toolbox/grd-toolbar-btns'
+                = render partial: 'toolbox/grd-toolbar-btns'
               .span11
                 %canvas#grading-canvas{ :width => 600, :height => 800 }
     = yield :toolbox
