Shared workbench moved to within examiners/
An admin is an examiner with a few more priviliges - thats all.
And therefore, the shared workbench is housed within examiners/

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -9,7 +9,7 @@
     = render partial: 'toolbox/line'
     = render partial: 'toolbox/preview'
     = render partial: 'menus/user/account'
-    = render partial: 'menus/admin/workbench', locals: { :is_admin => is_admin }
+    = render partial: 'menus/examiner/workbench', locals: { is_admin: is_admin } 
     = render partial: 'menus/user/notifications'
     = render partial: 'examiners/annotation-marks'
     = render partial: 'menus/examiner/blockdb'
