--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -18,6 +18,7 @@
   #modals
     = render partial: 'modals/user/account'
     = render partial: 'modals/examiner/audit'
+    = render partial: 'modals/examiner/upload-video-solution'
     = render partial: 'notifications/shared/last-scan'
     = render partial: 'notifications/shared/first-scan'
 
