--- a/app/views/menus/teacher/_per-question.html.haml
+++ b/app/views/menus/teacher/_per-question.html.haml
@@ -5,3 +5,5 @@
     :icon => 'icon-thumbs-up', :remote => true, :url => { :self => "like.json?id=:a" }
   %li
     = simple_link :for => 'Report issue(s)', :id => 'lnk-audit-question', :icon => 'icon-warning-sign'
+  %li
+    = simple_link for: "Play Solution", icon: 'icon-play', id: 'lnk-play-video'
